# InferX

./: CMakeLists.txt  README.en.md  README.md
include/base/: alloc.h  base.h  buffer.h  tick.h
include/models/: config.h  llama2.h  model.h  qwen2.h  raw_model_data.h  sampler.h
include/op/: add.h  embeding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
include/tensor/: tensor.h
kernels/: kernel_interface.cpp  kernel_interface.h
kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp
server/: CMakeLists.txt  main.cpp
src/base/: alloc.cpp  base.cpp  buffer.cpp
src/models/: llama2.cpp  model.cpp  qwen2.cpp  raw_model_data.cpp  sampler.cpp
src/op/: add.cpp  embeding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
src/tensor/: tensor.cpp
tests/: CMakeLists.txt  test_add.cpp  test_buffer.cpp  test_emb.cpp  test_llama_cpu.cpp  test_main.cpp  test_mamul.cpp  test_rmsnorm.cpp  test_scale.cpp  test_softmax.cpp  test_swiglu.cpp  test_tensor.cpp
tmp/: encode_tmp.h  llama2.cpp  llama2.h
